--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ authors = ["oamam <chapa0106@gmail.com>"]
 edition = "2018"
 license = "MIT"
 description = "The tool to output IPv4 informations"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+documentation = "https://docs.rs/ipr/"
+homepage = "https://crates.io/crates/ipr"
+repository = "https://github.com/oamam/ipr"
+readme = "README.md"
 
 [dependencies]
 clap = "2.33.1"
