:wrench: fix the document url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["oamam <chapa0106@gmail.com>"]
 edition = "2018"
 license = "MIT"
 description = "The tool to output IPv4 informations"
-documentation = "https://docs.rs/ipr/"
+documentation = "https://docs.rs/ipr/0.1.0/ipr"
 homepage = "https://crates.io/crates/ipr"
 repository = "https://github.com/oamam/ipr"
 readme = "README.md"
